--- a/Hixsa_Pets_FRONT_ANGULAR/src/app/layout/side-bar/side-bar.component.html
+++ b/Hixsa_Pets_FRONT_ANGULAR/src/app/layout/side-bar/side-bar.component.html
@@ -10,8 +10,8 @@
       </button>
       <div class="collapse show" id="home-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ">
-          <li><a href="/pets/add" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Agregar mascota</a></li>
-          <li><a href="/pets/list" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ver mascotas</a></li>
+          <li><a href="/pets/add" class="link-body-emphasis d-inline-flex text-decoration-none rounded"><i class="bi bi-plus-square-fill me-2 text-warning"></i>Agregar mascota</a></li>
+          <li><a href="/pets/list" class="link-body-emphasis d-inline-flex text-decoration-none rounded"><i class="bi bi-suit-heart-fill me-2 text-primary"></i> Ver mascotas</a></li>
         </ul>
       </div>
     </li>
