--- a/Hixsa_Pets_FRONT_ANGULAR/src/app/modules/pets/components/pets-list/pets-list.component.html
+++ b/Hixsa_Pets_FRONT_ANGULAR/src/app/modules/pets/components/pets-list/pets-list.component.html
@@ -2,7 +2,7 @@
     <div class="col">
         <div class="d-flex justify-content-between align-items-center my-4">
             <p class="h4">Todas las mascotas</p>
-            <a routerLink="../add" class="btn btn-outline-primary rounded-pill" tabindex="-1" role="button" aria-disabled="true"><i class="bi bi-plus"></i> Agregar mascota</a>
+            <a routerLink="../add" class="btn btn-primary rounded-pill" tabindex="-1" role="button" aria-disabled="true"><i class="bi bi-plus"></i> Agregar mascota</a>
         </div>
         
     </div>
